crates/parser/src/snapshots/parser__tests__err_test@0100_conclude_no_ident.ath.snap
---
source: crates/parser/src/tests.rs
description: "conclude := (factorial (zero - one) <= factorial zero)\n (!force base_case)\n"
input_file: crates/parser/test_data/parser/inline/err/ded/0100_conclude_no_ident.ath
---
CONCLUDE_DED
  CONCLUDE_KW "conclude"
  WHITESPACE " "
  COLON_EQ ":="
  WHITESPACE " "
  APPLICATION_EXPR
    L_PAREN "("
    IDENT_EXPR
      IDENTIFIER
        IDENT "factorial"
        WHITESPACE " "
    EXPR_PHRASE
      APPLICATION_EXPR
        L_PAREN "("
        IDENT_EXPR
          IDENTIFIER
            IDENT "zero"
            WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            IDENTIFIER
              IDENT "-"
              WHITESPACE " "
        EXPR_PHRASE
          IDENT_EXPR
            IDENTIFIER
              IDENT "one"
        R_PAREN ")"
        WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "<="
          WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "factorial"
          WHITESPACE " "
    EXPR_PHRASE
      IDENT_EXPR
        IDENTIFIER
          IDENT "zero"
    R_PAREN ")"
    WHITESPACE "\n "
  DED_PHRASE
    BANG_METHOD_CALL_DED
      L_PAREN "("
      BANG "!"
      IDENT_EXPR
        IDENTIFIER
          IDENT "force"
          WHITESPACE " "
      EXPR_PHRASE
        IDENT_EXPR
          IDENTIFIER
            IDENT "base_case"
      R_PAREN ")"
      WHITESPACE "\n"
error 9: expected identifier in conclude deduction

