crates/parser/src/snapshots/parser__tests__lex_ok.snap
---
source: crates/parser/src/tests.rs
description: "?x: (List Int)"
---
QUESTION "?"
IDENT "x"
COLON ":"
WHITESPACE " "
L_PAREN "("
IDENT "List"
WHITESPACE " "
IDENT "Int"
R_PAREN ")"

