crates/parser/src/snapshots/parser__tests__lex_ok@domain_with_person.ath.snap
---
source: crates/parser/src/tests.rs
description: "domain Person \n\n"
input_file: crates/parser/test_data/lexer/ok/domain_with_person.ath
---
DOMAIN_KW "domain"
WHITESPACE " "
IDENT "Person"
WHITESPACE " \n\n"

