crates/parser/src/snapshots/parser__tests__lex_ok@var_with_sort.ath.snap
---
source: crates/parser/src/tests.rs
description: "?x: (List Int)"
input_file: crates/parser/test_data/lexer/ok/var_with_sort.ath
---
QUESTION "?"
IDENT "x"
COLON ":"
WHITESPACE " "
L_PAREN "("
IDENT "List"
WHITESPACE " "
IDENT "Int"
R_PAREN ")"

