crates/parser/src/snapshots/parser__tests__ok_test@0004_simple_term_var_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "?foo:bar\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0004_simple_term_var_expr.ath
---
TERM_VAR_EXPR
  QUESTION "?"
  IDENTIFIER
    IDENT "foo"
  COLON ":"
  IDENT_SORT
    IDENTIFIER
      IDENT "bar"
      WHITESPACE "\n"

