crates/parser/src/snapshots/parser__tests__ok_test@0010_simple_lambda_expr.ath.snap
---
source: crates/parser/src/tests.rs
description: "lambda (x y z) \"hello world\"\n"
input_file: crates/parser/test_data/parser/inline/ok/expr/0010_simple_lambda_expr.ath
---
LAMBDA_EXPR
  LAMBDA_KW "lambda"
  WHITESPACE " "
  L_PAREN "("
  IDENTIFIER
    IDENT "x"
    WHITESPACE " "
  IDENTIFIER
    IDENT "y"
    WHITESPACE " "
  IDENTIFIER
    IDENT "z"
  R_PAREN ")"
  WHITESPACE " "
  LITERAL_EXPR
    LITERAL
      STRING "\"hello world\""
      WHITESPACE "\n"

